--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <div class="underlay"></div>
   <span class="initial">
     <span>Your</span>
-    <span>smile is wonder</span>
+    <span><i>smile</i> is wonder</span>
   </span>
   <span class="final">
-    <span>We will</span>
-    <span>never let it fade</span>
+    <span>I will</span>
+    <span>never let it <i>fade</i></span>
   </span>
 </h1>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
